# AttendBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  schedule.toml
app/: config.py  driver_factory.py  schedule.py  telegram.py
app/pages/: login_page.py
app/services/: attendance.py
docker/: entrypoint.sh  wait_for_selenium.py
