[project]
name = "attendbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs==23.2.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "h11==0.14.0",
    "idna==3.7",
    "outcome==1.3.0.post0",
    "pysocks==1.7.1",
    "python-dotenv>=1.2.1",
    "requests==2.32.2",
    "selenium==4.18.1",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "trio==0.25.0",
    "trio-websocket==0.11.1",
    "typing-extensions==4.10.0",
    "urllib3==2.2.2",
    "wsproto==1.2.0",
]
